# pcl_examples

./: .gitignore  CMakeLists.txt  README.md
Aligning object templates to a point cloud/: CMakeCache.txt  Makefile  cmake_install.cmake  data.txt  dominant_cluster.pcd  template_alignment  template_alignment.cpp
Zhenya's algorithm/: CMakeCache.txt  CMakeLists.txt  Makefile  PlaneDetector.cpp  PlaneDetector.h  Skeleton.cpp  Skeleton.h  TempMatching.cpp  TempMatching.h  cmake_install.cmake  main.cpp
cluster_extraction/: CMakeCache.txt  Makefile  cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_10.pcd  cloud_cluster_11.pcd  cloud_cluster_12.pcd  cloud_cluster_13.pcd  cloud_cluster_14.pcd  cloud_cluster_15.pcd  cloud_cluster_16.pcd  cloud_cluster_17.pcd  cloud_cluster_18.pcd  cloud_cluster_19.pcd  cloud_cluster_2.pcd  cloud_cluster_20.pcd  cloud_cluster_22.pcd  cloud_cluster_23.pcd  cloud_cluster_24.pcd  cloud_cluster_26.pcd  cloud_cluster_28.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cloud_cluster_5.pcd  cloud_cluster_6.pcd  cloud_cluster_7.pcd  cloud_cluster_8.pcd  cloud_cluster_9.pcd  cluster_extraction  cluster_extraction.cpp  cmake_install.cmake  test_pcd_plane_0.pcd
convex_hull/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  concave_hull_2d  table_scene_mug_stereo_textured_hull.pcd
corespondance_grouping/: CMakeCache.txt  Makefile  cmake_install.cmake  correspondence_grouping  correspondence_grouping.cpp  cube.pcd
cube_generation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cube.pcd  cube_detection  cube_detection.cpp
edge_detection/: CMakeCache.txt  CMakeLists.txt  Makefile  boundary_edges_scene.pcd  cmake_install.cmake  edge_detection  edge_detection.cpp  high_curvature_edges_scene.pcd  occluded_edges_scene.pcd  occluding_edges_scene.pcd  rgb_edges_scene.pcd
find_boxes_opencv/: CMakeCache.txt  CMakeLists.txt  extracted_plane.pcd  find_boxes_opencv  find_boxes_opencv.cpp  test_pcd_plane_1.pcd
harris_keypoints/: CMakeCache.txt  CMakeLists.txt  harris_keypoints  harris_keypoints.cpp  harris_keypoints.pcd  sift_points.pcd
iss_keypoints/: CMakeCache.txt  CMakeLists.txt  dominant_cluster.pcd  iss_keypoints  iss_keypoints.cpp  iss_keypoints.pcd
keypoints_descriptors_test/: CMakeCache.txt  CMakeLists.txt  box_aligned.pcd  box_model.pcd  box_model_affine.pcd  features_box.pcd  features_scene.pcd  iss_keypoints_box.pcd  iss_keypoints_scene.pcd  keypoints_descriptors_test  keypoints_descriptors_test.cpp  normals_box.pcd  normals_scene.pcd
line_segmentation/: CMakeCache.txt  CMakeLists.txt  line_segmentation  line_segmentation.cpp  rgb_edges_scene.pcd  test_pcd_line_0.pcd  test_pcd_line_1.pcd  test_pcd_line_10.pcd  test_pcd_line_11.pcd  test_pcd_line_12.pcd  test_pcd_line_13.pcd  test_pcd_line_14.pcd  test_pcd_line_15.pcd  test_pcd_line_16.pcd  test_pcd_line_2.pcd  test_pcd_line_3.pcd  test_pcd_line_4.pcd  test_pcd_line_5.pcd  test_pcd_line_6.pcd  test_pcd_line_7.pcd  test_pcd_line_8.pcd  test_pcd_line_9.pcd
openni_grabber/: CMakeCache.txt  Makefile  cmake_install.cmake  openni_grabber  openni_grabber.cpp
plane_segmentation/: CMakeCache.txt  CMakeLists.txt  Makefile  applyPassThroughFilter.pcd  cmake_install.cmake  dominant_cluster.pcd  plane_segmentation  plane_segmentation.cpp  test_pcd_downsampled.pcd  test_pcd_plane_0.pcd  test_pcd_plane_1.pcd  test_pcd_plane_2.pcd  test_pcd_plane_3.pcd  test_pcd_plane_4.pcd  test_pcd_plane_5.pcd  test_pcd_plane_6.pcd  test_pcd_plane_7.pcd
point_cloud_stiching/: 1.pcd  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  point_cloud_stiching.cpp
point_cloud_viewer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  point_cloud_viewer  point_cloud_viewer.cpp
pose_estimation/: CMakeCache.txt  Makefile  alignment_prerejective  cmake_install.cmake  cube_normals.pcd  cube_normals_affine.pcd  scene_normals.pcd  stiched_filtered_scene.pcd
principal_curvature_estimation/: CMakeCache.txt  CMakeLists.txt  Makefile  PrincipalCurvaturesEstimation  PrincipalCurvaturesEstimation.cpp  cmake_install.cmake  principal_curvatures.pcd
region_growing_segmentation/: CMakeCache.txt  cluster_0.pcd  cluster_1.pcd  cluster_2.pcd  cluster_3.pcd  cluster_4.pcd  clusters.pcd  convex_hull.pcd  region_growing_segmentation  region_growing_segmentation.cpp  test_cloud_0.pcd  test_cloud_1.pcd
sift_keypoints/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example_sift_keypoint_estimation.cpp  example_sift_normal_keypoint_estimation.cpp  example_sift_z_keypoint_estimation.cpp  screenshot-1486465548.cam  sift_keypoints  sift_points.pcd
sift_keypoints/UILD_visualization/: CMakeCache.txt  Makefile  cmake_install.cmake
